Fixed an Equity search widget not showing labels

--- a/scss/partials/_widgets.scss
+++ b/scss/partials/_widgets.scss
@@ -811,7 +811,7 @@ table#wp-calendar {
 	margin: 35px 0;
 }
 
-.impress-idx-signup-widget, .equity-idx-search-widget {
+.impress-idx-signup-widget {
 	> p {
 		padding-bottom: 20px;
 	}
